# telegramrag

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 00001_init_telegram.py
app/: main.py
app/api/: dependencies.py
app/api/endpoints/: __init__.py  rag.py  telegram.py
app/core/config/: base.py  db.py  rag.py  settings.py  telegram.py
app/db/: database.py
app/models/: base.py  telegram.py
app/prompts/: __init__.py  rag.py
app/repository/: __init__.py  base.py  telegram.py
app/schemas/: __init__.py  rag.py  telegram.py
app/services/: pyrogram.py  telegram.py
app/services/rag/: base.py  embeddings.py  hyde.py  selfrag.py
