[project]
name = "telegramrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.29.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "atomic-agents>=2.8.1",
    "fastapi>=0.138.0",
    "ollama>=0.6.2",
    "pgvector>=0.4.2",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyrofork>=2.3.69",
    "ruff>=0.15.18",
    "sentence-transformers[audio,image]>=5.6.0",
    "sqlalchemy>=2.0.51",
    "tgcrypto-pyrofork>=1.2.8",
    "uvicorn>=0.49.0",
]
